--- a/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
+++ b/vignettes/Week2_Spatial_Data/Week2_bonus_vignette.Rmd
@@ -29,6 +29,7 @@ Try modifying the code to import your own data!
 ### b) Required R libraries
 
 ```{r message=FALSE, warning=TRUE}
+require(LandGenCourse)
 require(sp)
 require(sf)
 require(raster)
@@ -150,16 +151,17 @@ Map + layer(sp.points(Sites.sp, pch=16, col="yellow", cex=1.1)) +
   layer(sp.points(Sites.sp, pch=1, col="black", cex=1.1))
 ```
 
+The following code detaches all packages except for some basic ones:
 
 ```{r message=FALSE, warning=TRUE, include=FALSE}
-
-detach("package:rasterVis", unload=TRUE)
-detach("package:raster", unload=TRUE)
-detach("package:sp", unload=TRUE)
-detach("package:GeNetIt", unload=TRUE)
-detach("package:sf", unload=TRUE)
-detach("package:tmaptools", unload=TRUE)
-detach("package:latticeExtra", unload=TRUE)
-detach("package:lattice", unload=TRUE)
-detach("package:RColorBrewer", unload=TRUE)
+#detach("package:rasterVis", unload=TRUE)
+#detach("package:raster", unload=TRUE)
+#detach("package:sp", unload=TRUE)
+#detach("package:GeNetIt", unload=TRUE)
+#detach("package:sf", unload=TRUE)
+#detach("package:tmaptools", unload=TRUE)
+#detach("package:latticeExtra", unload=TRUE)
+#detach("package:lattice", unload=TRUE)
+#detach("package:RColorBrewer", unload=TRUE)
+LandGenCourse::detachAllPackages()
 ```
