Week1_vignette.Rmd: amended 'detachAllPackages'

--- a/vignettes/Week1_Importing_Genetic_Data/Week1_vignette.Rmd
+++ b/vignettes/Week1_Importing_Genetic_Data/Week1_vignette.Rmd
@@ -289,5 +289,5 @@ The following code detaches all packages except for some basic ones:
 #detach("package:adegenet", unload=TRUE)
 #detach("package:ade4", unload=TRUE)
 #detach("package:gstudio", unload=TRUE)
-detachAllPackages()
+LandGenCourse::detachAllPackages()
 ```
